--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,45 @@
+html,
 body {
-    background-color: #f1f1f1;
-    font-family: 'Roboto', arial, cursive;
-    margin: 0;
-    padding: 0;
+  height: 100%;
+}
+
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: "Roboto", arial, cursive;
+    background-color: #f2f2f7;
+    transition: 0.4s;
+}
+
+body.dark {
+    background-color: #212121;
+}
+
+body.dark .login-container {
+    background-color: #212121;
+    border: 1px solid #444444;
+    color: #ffffff
 }
 
 .login-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     background-color: #ffffff;
-    max-width: 300px;
-    margin: 100px auto;
-    padding: 20px;
+    max-width: 18.75rem;
+    margin: 6.25rem auto;
+    width: 100%;
+    padding: 1.25rem;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: .313rem;
     text-align: center;
+    transition: 0.4s;
 }
 
-h2 {
+h2  {
     margin-bottom: 20px;
 }
 
@@ -39,4 +63,51 @@ button {
 
 button:hover {
     background-color: #45a049;
+}
+
+.switch {
+    position: relative;
+    width: 3.5rem;
+    height: 2rem;
+    left: 535px;
+    bottom: 665px;
+}
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(215, 215, 228);
+    transition: 0.4s;
+    border-radius: 30px;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 1.4rem;
+    width: 1.4rem;
+    border-radius: 20px;
+    left: 0.3rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background: linear-gradient(40deg, #ff0080, #ff8c00 70%);
+    transition: 0.4s;
+}
+
+input:checked + .slider {
+    background-color: #37393f;
+}
+
+input:checked + .slider:before {
+    left: calc(100% - 1.7rem);
+    background: #37393f;
+    box-shadow: inset -3px -2px 5px -2px #8983f7, inset -10px -4px 0 0 #a3dafb;
 }
