--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 html,
 body {
-  height: 100%;
+    height: 100%;
 }
 
 body {
@@ -69,8 +69,8 @@ button:hover {
     position: relative;
     width: 3.5rem;
     height: 2rem;
-    left: 535px;
-    bottom: 665px;
+    left: 56rem;
+    bottom: 42rem;
 }
 .switch input {
     opacity: 0;
