--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ button:hover {
     background-color: #45a049;
 }
 
-.switch {
+.switch-container {
     display: flex;
     width: 3.5rem;
     height: 2rem;
@@ -72,7 +72,7 @@ button:hover {
     top: 1rem;
     right: 1rem;
 }
-.switch input {
+.switch-container input {
     opacity: 0;
     width: 0;
     height: 0;
