--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ body.dark .login-container {
 
 .login-container {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     background-color: #ffffff;
-    max-width: 18.75rem;
+    max-width: 30rem;
     margin: 6.25rem auto;
     padding: 1.25rem;
     border: 1px solid #ccc;
@@ -44,10 +44,22 @@ h2  {
 
 input[type="text"],
 input[type="password"] {
-    width: 100%;
+    width: calc(50% - 5px);
     padding: 10px;
     margin-bottom: 10px;
     box-sizing: border-box;
+}
+
+@media (max-width: 600px) {
+    .login-container {
+        flex-direction: column;
+        max-width: 18.75rem;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        width: 100%;
+    }
 }
 
 button {
@@ -58,6 +70,7 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    flex: 1 0 40px;
 }
 
 button:hover {
