--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,11 @@ body.dark .login-container {
 
 .login-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #ffffff;
-    max-width: 30rem;
+    max-width: 18.75rem;
     margin: 6.25rem auto;
     padding: 1.25rem;
     border: 1px solid #ccc;
@@ -44,22 +44,13 @@ h2  {
 
 input[type="text"],
 input[type="password"] {
-    width: calc(50% - 5px);
+    width: 100%;
     padding: 10px;
+    font-size: 16px;
     margin-bottom: 10px;
     box-sizing: border-box;
-}
-
-@media (max-width: 600px) {
-    .login-container {
-        flex-direction: column;
-        max-width: 18.75rem;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-        width: 100%;
-    }
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
 button {
@@ -67,6 +58,7 @@ button {
     padding: 10px;
     background-color: #4caf50;
     color: #ffffff;
+    font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -75,6 +67,17 @@ button {
 
 button:hover {
     background-color: #45a049;
+}
+
+@media (max-width: 600px) {
+    button {
+        font-size: 13px;
+    }
+
+    input[type="text"],
+    input[type="password"] {
+        font-size: 13px;
+    }
 }
 
 .switch-container {
